--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <style>
         #position{
-	position:fixed;
-	bottom:70%;
+	/* position:fixed; */
+	/* bottom:70%; */
 	left:45%;
 }
 .sunflower{
@@ -172,17 +172,17 @@ body {
 <body>
     <h3><b>Hey sunshine , can you smile now for once </b></h3>
 
-    <h4>
-        tu yu rutha na kar ,
-        yuu aansu bahaya nah kar 
-        teri us muskaan ke liye kuch bhi kar jaunga
-        tu bas mujhe apna bulaya kar
+    <h4 style="text-align: center;">
+        tu yu rutha na kar , <br>
+        yuu aansu bahaya nah kar <br>
+        teri us muskaan ke liye kuch bhi kar jaunga<br>
+        tu bas mujhe apna bulaya kar<br>
 
-        i love you baby , smile now , shine now 
-        dont think much 
-        sleeep nicely ! 
+        i love you baby , smile now , shine now <br>
+        dont think much <br>
+        sleeep nicely ! <br>
     </h4>
-    <div id="position" class="sunflower">
+    <div id="position" class="sunflower" style="">
         <div class="head">
             <div id="eye-1" class="eye"></div>
             <div id="eye-2" class="eye"></div>
